포스트 작성 페이지와 작성 후 mysql에 등록하는 기능 구현

--- a/src/main/resources/templates/web/list.html
+++ b/src/main/resources/templates/web/list.html
@@ -28,6 +28,6 @@
             <td th:text="${postResponseDto.getModifiedDate}"></td><br/>
     </tr>
 </table>
-
+<a th:href="|@{/post/write}|">포스트 작성</a>
 </body>
 </html>
