포스트 작성 시 회원정보의 닉네임 정보가 글쓴이로 나오도록 수정

--- a/src/main/resources/templates/web/postDetail.html
+++ b/src/main/resources/templates/web/postDetail.html
@@ -20,5 +20,8 @@
         <td colspan="4" th:text="${postResponseDto.getContent}"></td>
     </tr>
 </table>
+<form action="/edit" method="get">
+    <button th:if="${postResponseDto.getWriter} == ${userNickName}">수정하기</button>
+</form>
 </body>
 </html>
